# Big_Images_Converter

./: README.md
ImageConvertThreadPool/: CMakeLists.txt  main.cpp
ImageConvertThreadPool/ConsoleControlSystem/include/: ConsoleManager.h
ImageConvertThreadPool/ConsoleControlSystem/src/: ConsoleManager.cpp
ImageConvertThreadPool/ImageCoreProcessing/include/: ConverterCore.h
ImageConvertThreadPool/ImageCoreProcessing/src/: ConverterCore.cpp
ImageConvertThreadPool/ThreadPool/include/: ThreadPool.h
ImageConvertThreadPool/ThreadPool/src/: ThreadPool.cpp
ImageConvertThreadPool/Util/include/: Common.h
ImageConvertThreadPool/Util/src/: Common.cpp
LogFind/include/: Service.h
LogFind/src/: Service.cpp
ThreadPool/ConsoleControlSystem/include/: ConsoleManager.h
ThreadPool/ConsoleControlSystem/src/: ConsoleManager.cpp
ThreadPool/ImageCoreProcessing/include/: ConverterCore.h
ThreadPool/ImageCoreProcessing/src/: ConverterCore.cpp
ThreadPool/Util/: Common.cpp  Common.h
cloneSwagger/: CloneSwagger.cpp  CloneSwagger.h
visionAiTest/Common/: CMakeLists.txt
visionAiTest/Common/include/: CasinoServiceException.h  ClonixCasinoConfig.h  Config.h  IEndpointProvider.h  IHttpServer.h  ISingleton.h  LogUtil.h  Logger.h  SerialPort.h
visionAiTest/Common/include/json/: json.hpp
visionAiTest/Common/src/: ClonixCasinoConfig.cpp  Config.cpp  LogUtil.cpp  Logger.cpp  SerialPort.cpp
